@@ -244,6 +244,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * dumpTextPass now skips goes to database for entries that were blank in the
   previous dump, as this may indicate a broken dump.
 * dumpTextPass progress includes percentage of items prefetched
+* dumpTextPass can now use 7zip files for prefetch
 
 
 == Compatibility ==
